--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,20 @@
-<% provide(:title, "Home") %>
-
-    <h1>StaticPages#home</h1>
-    <p>Find me in app/views/static_pages/home.html.erb</p>
+  <div class="center jumbotron">
+    <h1>Welcome</h1>
+    
+    <h2>
+      Please log in or <%= link_to "Sign up", "#" %>
+    </h2>
+    
+    <div class="center form-login">
+    <label for="usr">Username:</label>
+    <input type="text" class="form-control" id="usr" placeholder="Username here">
+    </div>
+    <div class="center form-login">
+    <label for="pwd">Password:</label>
+    <input type="password" class="form-control" id="pwd" placeholder="Password here">
+    </div>
+    
+    <%= link_to "Log in",  "#", class: "btn btn-lg btn-primary" %>
+    <%= link_to "Sign up", "#", class: "btn btn-lg btn-primary" %>
+  </div>
+  
