--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
     <h1>Welcome</h1>
     
     <h2>
-      Please log in or <%= link_to "Sign up", "#" %>
+      Please log in or <%= link_to "Sign up", signup_path %>
     </h2>
     
     <div class="center form-login">
@@ -15,6 +15,6 @@
     </div>
     
     <%= link_to "Log in",  "#", class: "btn btn-lg btn-primary" %>
-    <%= link_to "Sign up", "#", class: "btn btn-lg btn-primary" %>
+    <%= link_to "Sign up", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
   
