--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,16 +5,20 @@
       Please log in or <%= link_to "Sign up", signup_path %>
     </h2>
     
-    <div class="center form-login">
-    <label for="usr">Username:</label>
-    <input type="text" class="form-control" id="usr" placeholder="Username here">
-    </div>
-    <div class="center form-login">
-    <label for="pwd">Password:</label>
-    <input type="password" class="form-control" id="pwd" placeholder="Password here">
-    </div>
-    
-    <%= link_to "Log in",  "#", class: "btn btn-lg btn-primary" %>
-    <%= link_to "Sign up", signup_path, class: "btn btn-lg btn-primary" %>
+    <form class="form-login">
+      <label for="usr" class="sr-only">Username</label>
+      <input type="text" class="form-control" id="usr" placeholder="Username" required autofocus>
+      <label for="pwd" class="sr-only">Password:</label>
+      <input type="password" class="form-control" id="pwd" placeholder="Password" required>
+      <div class="checkbox">
+        <label>
+          <input type="checkbox" value="remember-me"> Remember me
+        </label>
+      </div>
+      <%= link_to "Log in",  "#", class: "btn btn-lg btn-primary btn-block" %>
+      <!-- <p>Or</p> 
+      <p>Press the sign up below!</p>
+      <%= link_to "Sign up", signup_path, class: "btn btn-lg btn-primary btn-block" %> -->
+    </form>
   </div>
   
