--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,8 +6,8 @@
     </h2>
     
     <form class="form-login">
-      <label for="usr" class="sr-only">Username</label>
-      <input type="text" class="form-control" id="usr" placeholder="Username" required autofocus>
+      <label for="usr" class="sr-only">Email address</label>
+      <input type="text" class="form-control" id="usr" placeholder="Email address" required autofocus>
       <label for="pwd" class="sr-only">Password:</label>
       <input type="password" class="form-control" id="pwd" placeholder="Password" required>
       <div class="checkbox">
