--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,6 @@
 
-    <h1>About</h1>
-    <p>Find me in app/views/static_pages/about.html.erb</p>
+  <h1>About</h1>
+  <p>
+    This page shows the background about this websit and is still in development.<br>
+    Please visit later.
+  </p>
