--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,6 @@
 
-    <h1>Help</h1>
-    <p>Find me in app/views/static_pages/help.html.erb</p>
+  <h1>Help</h1>
+  <p>
+    This page shows the common FAQ about this website and is still in development.<br>
+    Please visit later.
+  </p>
