--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,8 @@
     <%= link_to "Fill in the blanks w/ automated grading", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home",   root_path %></li>
-        <li><%= link_to "Help",   help_path %></li>
+        <li><%= link_to "", root_path, class: "glyphicon glyphicon-home" %></li>
+        <li><%= link_to "", help_path, class: "glyphicon glyphicon-question-sign" %></li>
         <li><%= link_to "Log in", "#" %></li>
         <li><%= link_to "Sign up", signup_path %></li>
       </ul>
