--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,16 +7,20 @@
       <%= render 'shared/error_messages' %>
       
       <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
+      <%= f.text_field :name, class: 'form-control', 
+                        placeholder: 'Full name/ First name/ Last name' %>
       
       <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+      <%= f.email_field :email, class: 'form-control', 
+                        placeholder: 'eg. user@testing.com' %>
       
       <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
+      <%= f.password_field :password, class: 'form-control',
+                        placeholder: 'At least 6 digi password needed' %>
       
       <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :passowrd_confirmation, class: 'form-control' %>
+      <%= f.password_field :passowrd_confirmation, class: 'form-control',
+                        placeholder: 'Please type the password again' %>
       
       <%= f.submit "Create my account", class: "btn btn-round" %>
     <% end %>
