--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,28 @@
       Please log in or <%= link_to "Sign up", signup_path %>
     </h2>
     
-    <form class="form-login">
+    <div class="left row">
+      <div class="col-md-6 col-md-offset-3">
+        <%= form_for(:static_pages, url: login_path) do |f| %>
+        
+          <%= f.label :email %>
+          <%= f.email_field :email, class: 'form-control',
+                            placeholder: 'Email address', autofocus: true %>
+                            
+          <%= f.label :password %>
+          <%= f.password_field :password, class: 'form-control',
+                                placeholder: 'Password' %>
+          
+          <%= f.label :remember_me, class: "checkbox inline" do %>
+            <%= f.check_box :remember_me %>
+            <span>Remember me</span> 
+          <% end %>
+                                
+          <%= f.submit "Log in", class: "btn btn-lg btn-primary btn-block" %>
+        <% end %>
+      </div>
+    </div>
+<!--    <form class="form-login">
       <label for="usr" class="sr-only">Email address</label>
       <input type="text" class="form-control" id="usr" placeholder="Email address" required autofocus>
       <label for="pwd" class="sr-only">Password:</label>
@@ -16,9 +37,9 @@
         </label>
       </div>
       <%= link_to "Log in",  "#", class: "btn btn-lg btn-primary btn-block" %>
-      <!-- <p>Or</p> 
+      <p>Or</p> 
       <p>Press the sign up below!</p>
-      <%= link_to "Sign up", signup_path, class: "btn btn-lg btn-primary btn-block" %> -->
-    </form>
+      <%= link_to "Sign up", signup_path, class: "btn btn-lg btn-primary btn-block" %>
+    </form> -->
   </div>
   
