--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,6 +14,7 @@
                             placeholder: 'Email address', autofocus: true %>
                             
           <%= f.label :password %>
+          <%= link_to "(forgot password)", new_password_reset_path %>
           <%= f.password_field :password, class: 'form-control',
                                 placeholder: 'Password' %>
           
